packages/tree-sitter/tdr-yaml/test/corpus/block_scalars/basic.txt
================
Literal block scalar
================
desc: |
  line one
  line two
---

(source_file
  (block_mapping_entry
    (property_key (identifier))
    (value
      (block_scalar
        (block_scalar_content)))))

================
Folded block scalar
================
desc: >
  line one
  line two
---

(source_file
  (block_mapping_entry
    (property_key (identifier))
    (value
      (block_scalar
        (block_scalar_content)))))

================
Block scalar followed by entry
================
desc: |
  content
name: test
---

(source_file
  (block_mapping_entry
    (property_key (identifier))
    (value
      (block_scalar
        (block_scalar_content))))
  (block_mapping_entry
    (property_key (identifier))
    (value
      (expression (identifier)))))

================
Block scalar with blank line
================
desc: |
  line one

  line two
---

(source_file
  (block_mapping_entry
    (property_key (identifier))
    (value
      (block_scalar
        (block_scalar_content)))))

================
Block scalar in sequence
================
items:
  - |
    hello
  - "normal"
---

(source_file
  (block_mapping_entry
    (property_key (identifier))
    (value
      (block_sequence_value
        (block_sequence_entry
          (value
            (block_scalar
              (block_scalar_content))))
        (block_sequence_entry
          (value
            (expression
              (string))))))))

================
Block scalar between entries
================
first: "before"
desc: >
  folded content
  more content
last: "after"
---

(source_file
  (block_mapping_entry
    (property_key (identifier))
    (value
      (expression (string))))
  (block_mapping_entry
    (property_key (identifier))
    (value
      (block_scalar
        (block_scalar_content))))
  (block_mapping_entry
    (property_key (identifier))
    (value
      (expression (string)))))

================
Block scalar in nested mapping
================
outer:
  desc: |
    nested content
  name: "test"
---

(source_file
  (block_mapping_entry
    (property_key (identifier))
    (value
      (block_mapping_value
        (block_mapping_entry
          (property_key (identifier))
          (value
            (block_scalar
              (block_scalar_content))))
        (block_mapping_entry
          (property_key (identifier))
          (value
            (expression (string))))))))

================
Multiple block scalars
================
desc: |
  first
body: >
  second
---

(source_file
  (block_mapping_entry
    (property_key (identifier))
    (value
      (block_scalar
        (block_scalar_content))))
  (block_mapping_entry
    (property_key (identifier))
    (value
      (block_scalar
        (block_scalar_content)))))

================
Empty block scalar
================
desc: |
name: "test"
---

(source_file
  (block_mapping_entry
    (property_key (identifier))
    (value
      (block_scalar)))
  (block_mapping_entry
    (property_key (identifier))
    (value
      (expression (string)))))
