packages/tree-sitter/tdr-yaml/test/corpus/mappings/basic.txt
================
Single entry
================
name: "Alice"
---

(source_file
  (block_mapping_entry
    (property_key
      (identifier))
    (value
      (expression
        (string)))))

================
Multiple entries
================
_type: person
name: "Bob"
age: 42
---

(source_file
  (block_mapping_entry
    (property_key
      (reserved_key))
    (value
      (expression
        (identifier))))
  (block_mapping_entry
    (property_key
      (identifier))
    (value
      (expression
        (string))))
  (block_mapping_entry
    (property_key
      (identifier))
    (value
      (expression
        (number)))))

================
Boolean values
================
active: true
deleted: false
---

(source_file
  (block_mapping_entry
    (property_key
      (identifier))
    (value
      (expression
        (boolean))))
  (block_mapping_entry
    (property_key
      (identifier))
    (value
      (expression
        (boolean)))))
