packages/tree-sitter/tdr-yaml/test/corpus/sequences/basic.txt
================
Block sequence
================
tags:
  - "one"
  - "two"
---

(source_file
  (block_mapping_entry
    (property_key
      (identifier))
    (value
      (block_sequence_value
        (block_sequence_entry
          (value
            (expression
              (string))))
        (block_sequence_entry
          (value
            (expression
              (string))))))))

================
Sequence of expressions
================
refs:
  - fref("a.tdr")
  - fref("b.tdr")
---

(source_file
  (block_mapping_entry
    (property_key
      (identifier))
    (value
      (block_sequence_value
        (block_sequence_entry
          (value
            (expression
              (fref
                (string)))))
        (block_sequence_entry
          (value
            (expression
              (fref
                (string)))))))))

================
Sequence with inline mapping
================
items:
  - name: "Alice"
    age: 30
  - name: "Bob"
    age: 25
---

(source_file
  (block_mapping_entry
    (property_key
      (identifier))
    (value
      (block_sequence_value
        (block_sequence_entry
          (block_mapping_entry
            (property_key
              (identifier))
            (value
              (expression
                (string))))
          (block_mapping_entry
            (property_key
              (identifier))
            (value
              (expression
                (number)))))
        (block_sequence_entry
          (block_mapping_entry
            (property_key
              (identifier))
            (value
              (expression
                (string))))
          (block_mapping_entry
            (property_key
              (identifier))
            (value
              (expression
                (number)))))))))

================
Sequence then mapping
================
tags:
  - "one"
  - "two"
other: "val"
---

(source_file
  (block_mapping_entry
    (property_key
      (identifier))
    (value
      (block_sequence_value
        (block_sequence_entry
          (value
            (expression
              (string))))
        (block_sequence_entry
          (value
            (expression
              (string)))))))
  (block_mapping_entry
    (property_key
      (identifier))
    (value
      (expression
        (string)))))

================
Sequence then mapping
================
tags:
  - "one"
  - "two"
other: "val"
---

(source_file
  (block_mapping_entry
    (property_key
      (identifier))
    (value
      (block_sequence_value
        (block_sequence_entry
          (value
            (expression
              (string))))
        (block_sequence_entry
          (value
            (expression
              (string)))))))
  (block_mapping_entry
    (property_key
      (identifier))
    (value
      (expression
        (string)))))
