packages/tree-sitter/tdr-yaml/test/corpus/types/basic.txt
================
Primitive string type
================
val: !type string
---

(source_file
  (block_mapping_entry
    (property_key
      (identifier))
    (value
      (type_value
        (type_expression
          (primitive_type))))))

================
List type
================
val: !type list[string]
---

(source_file
  (block_mapping_entry
    (property_key
      (identifier))
    (value
      (type_value
        (type_expression
          (list_type
            (type_expression
              (primitive_type))))))))

================
Union type
================
val: !type [string, number]
---

(source_file
  (block_mapping_entry
    (property_key
      (identifier))
    (value
      (type_value
        (type_expression
          (union_type
            (union_member
              (type_expression
                (primitive_type)))
            (union_member
              (type_expression
                (primitive_type)))))))))

================
Dict type
================
val: !type dict[string, number]
---

(source_file
  (block_mapping_entry
    (property_key
      (identifier))
    (value
      (type_value
        (type_expression
          (dict_type
            (type_expression
              (primitive_type))
            (type_expression
              (primitive_type))))))))

================
Fixed key dict type
================
val: !type { street: string, city: string }
---

(source_file
  (block_mapping_entry
    (property_key
      (identifier))
    (value
      (type_value
        (type_expression
          (fixed_key_dict_type
            (fixed_key_entry
              (identifier)
              (type_expression
                (primitive_type)))
            (fixed_key_entry
              (identifier)
              (type_expression
                (primitive_type)))))))))

================
Nested list type
================
val: !type list[list[string]]
---

(source_file
  (block_mapping_entry
    (property_key
      (identifier))
    (value
      (type_value
        (type_expression
          (list_type
            (type_expression
              (list_type
                (type_expression
                  (primitive_type))))))))))

================
String enum union
================
val: !type ["draft", "published"]
---

(source_file
  (block_mapping_entry
    (property_key
      (identifier))
    (value
      (type_value
        (type_expression
          (union_type
            (union_member
              (string))
            (union_member
              (string))))))))

================
Dict with list value type
================
val: !type dict[string, list[number]]
---

(source_file
  (block_mapping_entry
    (property_key
      (identifier))
    (value
      (type_value
        (type_expression
          (dict_type
            (type_expression
              (primitive_type))
            (type_expression
              (list_type
                (type_expression
                  (primitive_type))))))))))
